# neverest

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  README.md  build.rs  config.sample.toml  default.nix  deny.toml  flake.nix  install.sh  package.nix  rust-toolchain.nix  rust-toolchain.toml  shell.nix
.github/workflows/: pre-release.yml  pre-releases.yml  release-on-demand.yml  release.yml  releases.yml  tests.yml
src/: cli.rs  client.rs  config.rs  lib.rs  main.rs  output.rs  side.rs  tracing.rs
src/account/: config.rs  configure.rs  context.rs  doctor.rs  mod.rs  synchronize.rs  wizard.rs
src/account/arg/: mod.rs  name.rs
src/account/command/: check_up.rs  configure.rs  doctor.rs  mod.rs  sync.rs
src/backend/: config.rs  mod.rs  wizard.rs
src/cli/: check.rs  configure.rs  convert.rs  init.rs  main.rs  mod.rs  neverest.rs  sync.rs
src/completion/: command.rs
src/config/: mod.rs  wizard.rs
src/convert/: cli.rs  maildir.rs  mod.rs
src/imap/: client.rs  wizard.rs
src/jmap/: client.rs
src/m2dir/: diff.rs  mod.rs
src/maildir/: client.rs  mod.rs  wizard.rs
src/manual/: command.rs
src/notmuch/: wizard.rs
src/preset/: config.rs  mod.rs
src/preset/arg/: name.rs
src/printer/: print.rs  print_table.rs  printer.rs
src/sync/: apply.rs  builder.rs  cache.rs  cli.rs  command.rs  diff.rs  engine.rs  event.rs  hunk.rs  key.rs  m2dir_diff.rs  mod.rs  pool.rs  report.rs  sync.rs
src/ui/: mod.rs
src/wizard/: account.rs  autoconfig.rs  discover.rs  edit.rs  mod.rs  pacc.rs  srv.rs
