[package]
name = "neverest"
description = "CLI to synchronize, backup and restore emails"
version = "1.0.0"
authors = ["soywod <clement.douin@posteo.net>"]
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "email"]
keywords = ["cli", "email", "imap", "backup", "sync"]
homepage = "https://pimalaya.org/"
documentation = "https://pimalaya.org/neverest/cli/latest/"
repository = "https://github.com/soywod/neverest/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "maildir", "wizard"]
imap = ["email-lib/imap", "pimalaya-tui/imap"]
maildir = ["email-lib/maildir", "pimalaya-tui/maildir"]
notmuch = ["email-lib/notmuch", "pimalaya-tui/notmuch"]
keyring = ["email-lib/keyring", "pimalaya-tui/keyring", "secret-lib?/keyring"]
oauth2 = ["dep:oauth-lib", "email-lib/oauth2", "pimalaya-tui/oauth2", "keyring"]
wizard = ["dep:console", "dep:secret-lib", "email-lib/autoconfig", "pimalaya-tui/wizard"]

[build-dependencies]
pimalaya-tui = { version = "=0.1", default-features = false, features = ["build-envs"] }

[dev-dependencies]
neverest = { path = ".", features = ["notmuch", "keyring", "oauth2"] }

[dependencies]
async-trait = "0.1"
clap = { version = "4.4", features = ["derive", "wrap_help"] }
clap_complete = "4.4"
clap_mangen = "0.2"
color-eyre = "0.6"
email-lib = { version = "=0.26.0", default-features = false, features = ["tokio-rustls", "sync", "derive"] }
oauth-lib = { version = "1", optional = true }
once_cell = "1.16"
pimalaya-tui = { version = "=0.1", default-features = false, features = ["path", "cli", "config", "tracing"] }
secret-lib = { version = "1", optional = true, features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.23", default-features = false, features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

# TODO: delete console as soon as we can replace them with a crossterm
# alternative
console = { version = "0.15.2", optional = true }
indicatif = "0.17"

[patch.crates-io]
email-lib = { git = "https://github.com/pimalaya/core" }
keyring-lib = { git = "https://github.com/pimalaya/core" }
oauth-lib = { git = "https://github.com/pimalaya/core" }
pimalaya-tui = { git = "https://github.com/pimalaya/tui" }
process-lib = { git = "https://github.com/pimalaya/core" }
secret-lib = { git = "https://github.com/pimalaya/core" }
