[package]
name = "neverest"
description = "CLI to synchronize, backup and restore emails"
version = "2.0.0-alpha.1"
authors = ["soywod <clement.douin@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT"
categories = ["command-line-utilities", "email"]
keywords = ["cli", "email", "imap", "jmap", "backup", "sync"]
homepage = "https://pimalaya.org/"
documentation = "https://pimalaya.org/neverest/cli/latest/"
repository = "https://github.com/soywod/neverest/"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["imap", "jmap", "maildir", "rustls-ring"]
imap = ["dep:io-imap", "io-email/imap", "io-imap/client", "pimalaya-cli/imap"]
jmap = ["dep:base64", "dep:io-jmap", "io-email/jmap", "io-jmap/client", "pimalaya-cli/jmap"]
maildir = ["dep:io-maildir", "io-email/maildir", "io-maildir/client"]
native-tls = ["pimalaya-stream/native-tls", "io-discovery/native-tls", "io-imap?/native-tls", "io-jmap?/native-tls"]
rustls-aws = ["pimalaya-stream/rustls-aws", "io-discovery/rustls-aws", "io-imap?/rustls-aws", "io-jmap?/rustls-aws"]
rustls-ring = ["pimalaya-stream/rustls-ring", "io-discovery/rustls-ring", "io-imap?/rustls-ring", "io-jmap?/rustls-ring"]
vendored = ["pimalaya-stream/vendored"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[build-dependencies]
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["build"] }

[dependencies]
anyhow = "1"
base64 = { version = "0.22", optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
crossterm = { version = "0.29", default-features = false, features = ["serde"] }
dirs = "6"
indicatif = "0.17"
io-discovery = { version = "0.0.1", default-features = false, features = ["pacc", "autoconfig", "rfc6186", "client"] }
io-email = { version = "0.0.1", default-features = false, features = ["serde", "client", "search"] }
io-imap = { version = "0.0.1", default-features = false, optional = true }
io-jmap = { version = "0.0.1", default-features = false, optional = true }
io-maildir = { version = "0.0.1", default-features = false, optional = true }
log = "0.4"
mail-parser = { version = "0.11", features = ["serde"] }
percent-encoding = "2"
pimalaya-cli = { version = "0.0.1", default-features = false, features = ["terminal", "prompt", "wizard", "spinner", "imap", "jmap"] }
pimalaya-config = { version = "0.0.1", default-features = false, features = ["toml", "secret"] }
pimalaya-stream = { version = "0.0.1", default-features = false, features = ["std"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3.1"
toml = "0.8"
url = { version = "2.2", features = ["serde"] }

[patch.crates-io]
domain = { git = "https://github.com/soywod/domain", branch = "new-srv" }
io-discovery.path = "../io-discovery"
io-email.path = "../io-email"
io-http.path = "../io-http"
io-imap.path = "../io-imap"
io-jmap.path = "../io-jmap"
io-maildir.path = "../io-maildir"
io-smtp.path = "../io-smtp"
pimalaya-cli.path = "../cli"
pimalaya-config.path = "../config"
pimalaya-stream.path = "../stream"
